// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`style package content > should match content 1`] = `
{
  "blurFrosted": "blur(32px)",
  "border": {
    "radius": {
      "large": "8px",
      "medium": "6px",
      "small": "4px",
    },
    "width": {
      "base": "2px",
      "thin": "1px",
    },
  },
  "borderRadius": {
    "large": "8px",
    "medium": "6px",
    "small": "4px",
  },
  "borderRadiusLarge": "8px",
  "borderRadiusMedium": "6px",
  "borderRadiusSmall": "4px",
  "borderWidth": {
    "base": "2px",
    "thin": "1px",
  },
  "borderWidthBase": "2px",
  "borderWidthThin": "1px",
  "breakpoint": {
    "base": 0,
    "l": 1300,
    "m": 1000,
    "s": 760,
    "xl": 1760,
    "xs": 480,
    "xxl": 1920,
  },
  "breakpointBase": 0,
  "breakpointL": 1300,
  "breakpointM": 1000,
  "breakpointS": 760,
  "breakpointXL": 1760,
  "breakpointXS": 480,
  "breakpointXXL": 1920,
  "breakpoints": [
    "base",
    "xs",
    "s",
    "m",
    "l",
    "xl",
    "xxl",
  ],
  "colorBackdrop": "var(--_color-backdrop, light-dark(hsla(240, 5.3%, 14.9%, 0.500),hsla(240, 5.3%, 14.9%, 0.500)))",
  "colorCanvas": "var(--_color-canvas, light-dark(#fff,hsl(225, 66.7%, 1.2%)))",
  "colorContrastHigh": "var(--_color-contrast-high, light-dark(hsla(240, 7.1%, 11%, 0.700),hsla(240, 12.5%, 96.9%, 0.670)))",
  "colorContrastHigher": "var(--_color-contrast-higher, light-dark(hsla(240, 8.7%, 9%, 0.800),hsla(240, 12.5%, 96.9%, 0.780)))",
  "colorContrastLow": "var(--_color-contrast-low, light-dark(hsla(240, 5.3%, 14.9%, 0.500),hsla(240, 12.5%, 96.9%, 0.450)))",
  "colorContrastLower": "var(--_color-contrast-lower, light-dark(hsla(234, 6%, 32.9%, 0.324),hsla(240, 1.5%, 61.8%, 0.302)))",
  "colorContrastMedium": "var(--_color-contrast-medium, light-dark(hsla(240, 6.1%, 7%, 0.600),hsla(240, 12.5%, 96.9%, 0.560)))",
  "colorError": "var(--_color-error, light-dark(hsl(357, 78%, 41%),hsl(0, 96.9%, 62%)))",
  "colorErrorFrosted": "var(--_color-error-frosted, light-dark(hsla(357, 78%, 41%, 0.180),hsla(0, 96.9%, 62%, 0.260)))",
  "colorErrorFrostedSoft": "var(--_color-error-frosted-soft, light-dark(hsla(357, 78%, 41%, 0.100),hsla(0, 96.9%, 62%, 0.100)))",
  "colorErrorLow": "var(--_color-error-low, light-dark(hsla(357, 78%, 41%, 0.180),hsla(0, 96.9%, 62%, 0.180)))",
  "colorErrorMedium": "var(--_color-error-medium, light-dark(hsla(357, 78%, 41%, 0.600),hsla(0, 96.9%, 62%, 0.600)))",
  "colorFocus": "var(--_color-focus, light-dark(#1A44EA,#1A44EA))",
  "colorFrosted": "var(--_color-frosted, light-dark(hsla(240, 5%, 70%, 0.148),hsla(240, 2%, 43%, 0.228)))",
  "colorFrostedSoft": "var(--_color-frosted-soft, light-dark(hsla(234, 9.8%, 60%, 0.060),hsla(240, 3.7%, 26.5%, 0.154)))",
  "colorFrostedStrong": "var(--_color-frosted-strong, light-dark(hsla(236, 6.5%, 42%, 0.236),hsla(240, 1.5%, 61.8%, 0.302)))",
  "colorInfo": "var(--_color-info, light-dark(hsl(228, 83.2%, 51%),hsl(210, 100%, 54.5%)))",
  "colorInfoFrosted": "var(--_color-info-frosted, light-dark(hsla(228, 83.2%, 51%, 0.180),hsla(210, 100%, 54.5%, 0.260)))",
  "colorInfoFrostedSoft": "var(--_color-info-frosted-soft, light-dark(hsla(228, 83.2%, 51%, 0.100),hsla(210, 100%, 54.5%, 0.100)))",
  "colorInfoLow": "var(--_color-info-low, light-dark(hsla(228, 83.2%, 51%, 0.180),hsla(210, 100%, 54.5%, 0.180)))",
  "colorInfoMedium": "var(--_color-info-medium, light-dark(hsla(228, 83.2%, 51%, 0.600),hsla(210, 100%, 54.5%, 0.600)))",
  "colorPrimary": "var(--_color-primary, light-dark(hsl(225, 66.7%, 1.2%),hsl(225, 100%, 99%)))",
  "colorSchemeStyles": {
    ".scheme-dark": {
      "colorScheme": "dark",
    },
    ".scheme-light": {
      "colorScheme": "light",
    },
    ".scheme-light-dark": {
      "colorScheme": "light dark",
    },
    ".scheme-normal": {
      "colorScheme": "normal",
    },
    ".scheme-only-dark": {
      "colorScheme": "only dark",
    },
    ".scheme-only-light": {
      "colorScheme": "only light",
    },
    "@supports not (color: light-dark(white, black))": {
      ".scheme-dark, .scheme-only-dark": {
        "--_color-backdrop": "hsla(240, 5.3%, 14.9%, 0.500)",
        "--_color-canvas": "hsl(225, 66.7%, 1.2%)",
        "--_color-contrast-high": "hsla(240, 12.5%, 96.9%, 0.670)",
        "--_color-contrast-higher": "hsla(240, 12.5%, 96.9%, 0.780)",
        "--_color-contrast-low": "hsla(240, 12.5%, 96.9%, 0.450)",
        "--_color-contrast-lower": "hsla(240, 1.5%, 61.8%, 0.302)",
        "--_color-contrast-medium": "hsla(240, 12.5%, 96.9%, 0.560)",
        "--_color-error": "hsl(0, 96.9%, 62%)",
        "--_color-error-frosted": "hsla(0, 96.9%, 62%, 0.260)",
        "--_color-error-frosted-soft": "hsla(0, 96.9%, 62%, 0.100)",
        "--_color-error-low": "hsla(0, 96.9%, 62%, 0.180)",
        "--_color-error-medium": "hsla(0, 96.9%, 62%, 0.600)",
        "--_color-focus": "#1A44EA",
        "--_color-frosted": "hsla(240, 2%, 43%, 0.228)",
        "--_color-frosted-soft": "hsla(240, 3.7%, 26.5%, 0.154)",
        "--_color-frosted-strong": "hsla(240, 1.5%, 61.8%, 0.302)",
        "--_color-info": "hsl(210, 100%, 54.5%)",
        "--_color-info-frosted": "hsla(210, 100%, 54.5%, 0.260)",
        "--_color-info-frosted-soft": "hsla(210, 100%, 54.5%, 0.100)",
        "--_color-info-low": "hsla(210, 100%, 54.5%, 0.180)",
        "--_color-info-medium": "hsla(210, 100%, 54.5%, 0.600)",
        "--_color-primary": "hsl(225, 100%, 99%)",
        "--_color-success": "hsl(157, 84.9%, 41.6%)",
        "--_color-success-frosted": "hsla(157, 84.9%, 41.6%, 0.260)",
        "--_color-success-frosted-soft": "hsla(157, 84.9%, 41.6%, 0.100)",
        "--_color-success-low": "hsla(157, 84.9%, 41.6%, 0.180)",
        "--_color-success-medium": "hsla(157, 84.9%, 41.6%, 0.600)",
        "--_color-surface": "hsl(240, 2%, 10%)",
        "--_color-warning": "hsl(28, 90.2%, 56.1%)",
        "--_color-warning-frosted": "hsla(28, 90.2%, 56.1%, 0.260)",
        "--_color-warning-frosted-soft": "hsla(28, 90.2%, 56.1%, 0.100)",
        "--_color-warning-low": "hsla(28, 90.2%, 56.1%, 0.180)",
        "--_color-warning-medium": "hsla(28, 90.2%, 56.1%, 0.600)",
      },
      ":root, .scheme-light, .scheme-only-light, .scheme-normal, .scheme-light-dark": {
        "--_color-backdrop": "hsla(240, 5.3%, 14.9%, 0.500)",
        "--_color-canvas": "#fff",
        "--_color-contrast-high": "hsla(240, 7.1%, 11%, 0.700)",
        "--_color-contrast-higher": "hsla(240, 8.7%, 9%, 0.800)",
        "--_color-contrast-low": "hsla(240, 5.3%, 14.9%, 0.500)",
        "--_color-contrast-lower": "hsla(234, 6%, 32.9%, 0.324)",
        "--_color-contrast-medium": "hsla(240, 6.1%, 7%, 0.600)",
        "--_color-error": "hsl(357, 78%, 41%)",
        "--_color-error-frosted": "hsla(357, 78%, 41%, 0.180)",
        "--_color-error-frosted-soft": "hsla(357, 78%, 41%, 0.100)",
        "--_color-error-low": "hsla(357, 78%, 41%, 0.180)",
        "--_color-error-medium": "hsla(357, 78%, 41%, 0.600)",
        "--_color-focus": "#1A44EA",
        "--_color-frosted": "hsla(240, 5%, 70%, 0.148)",
        "--_color-frosted-soft": "hsla(234, 9.8%, 60%, 0.060)",
        "--_color-frosted-strong": "hsla(236, 6.5%, 42%, 0.236)",
        "--_color-info": "hsl(228, 83.2%, 51%)",
        "--_color-info-frosted": "hsla(228, 83.2%, 51%, 0.180)",
        "--_color-info-frosted-soft": "hsla(228, 83.2%, 51%, 0.100)",
        "--_color-info-low": "hsla(228, 83.2%, 51%, 0.180)",
        "--_color-info-medium": "hsla(228, 83.2%, 51%, 0.600)",
        "--_color-primary": "hsl(225, 66.7%, 1.2%)",
        "--_color-success": "hsl(115, 77.5%, 27.8%)",
        "--_color-success-frosted": "hsla(115, 77.5%, 27.8%, 0.180)",
        "--_color-success-frosted-soft": "hsla(115, 77.5%, 27.8%, 0.100)",
        "--_color-success-low": "hsla(115, 77.5%, 27.8%, 0.180)",
        "--_color-success-medium": "hsla(115, 77.5%, 27.8%, 0.600)",
        "--_color-surface": "hsl(240, 10%, 95%)",
        "--_color-warning": "hsl(28, 97.7%, 34.1%)",
        "--_color-warning-frosted": "hsla(28, 97.7%, 34.1%, 0.180)",
        "--_color-warning-frosted-soft": "hsla(28, 97.7%, 34.1%, 0.100)",
        "--_color-warning-low": "hsla(28, 97.7%, 34.1%, 0.180)",
        "--_color-warning-medium": "hsla(28, 97.7%, 34.1%, 0.600)",
      },
      "@media (prefers-color-scheme: dark)": {
        ".scheme-light-dark": {
          "--_color-backdrop": "hsla(240, 5.3%, 14.9%, 0.500)",
          "--_color-canvas": "hsl(225, 66.7%, 1.2%)",
          "--_color-contrast-high": "hsla(240, 12.5%, 96.9%, 0.670)",
          "--_color-contrast-higher": "hsla(240, 12.5%, 96.9%, 0.780)",
          "--_color-contrast-low": "hsla(240, 12.5%, 96.9%, 0.450)",
          "--_color-contrast-lower": "hsla(240, 1.5%, 61.8%, 0.302)",
          "--_color-contrast-medium": "hsla(240, 12.5%, 96.9%, 0.560)",
          "--_color-error": "hsl(0, 96.9%, 62%)",
          "--_color-error-frosted": "hsla(0, 96.9%, 62%, 0.260)",
          "--_color-error-frosted-soft": "hsla(0, 96.9%, 62%, 0.100)",
          "--_color-error-low": "hsla(0, 96.9%, 62%, 0.180)",
          "--_color-error-medium": "hsla(0, 96.9%, 62%, 0.600)",
          "--_color-focus": "#1A44EA",
          "--_color-frosted": "hsla(240, 2%, 43%, 0.228)",
          "--_color-frosted-soft": "hsla(240, 3.7%, 26.5%, 0.154)",
          "--_color-frosted-strong": "hsla(240, 1.5%, 61.8%, 0.302)",
          "--_color-info": "hsl(210, 100%, 54.5%)",
          "--_color-info-frosted": "hsla(210, 100%, 54.5%, 0.260)",
          "--_color-info-frosted-soft": "hsla(210, 100%, 54.5%, 0.100)",
          "--_color-info-low": "hsla(210, 100%, 54.5%, 0.180)",
          "--_color-info-medium": "hsla(210, 100%, 54.5%, 0.600)",
          "--_color-primary": "hsl(225, 100%, 99%)",
          "--_color-success": "hsl(157, 84.9%, 41.6%)",
          "--_color-success-frosted": "hsla(157, 84.9%, 41.6%, 0.260)",
          "--_color-success-frosted-soft": "hsla(157, 84.9%, 41.6%, 0.100)",
          "--_color-success-low": "hsla(157, 84.9%, 41.6%, 0.180)",
          "--_color-success-medium": "hsla(157, 84.9%, 41.6%, 0.600)",
          "--_color-surface": "hsl(240, 2%, 10%)",
          "--_color-warning": "hsl(28, 90.2%, 56.1%)",
          "--_color-warning-frosted": "hsla(28, 90.2%, 56.1%, 0.260)",
          "--_color-warning-frosted-soft": "hsla(28, 90.2%, 56.1%, 0.100)",
          "--_color-warning-low": "hsla(28, 90.2%, 56.1%, 0.180)",
          "--_color-warning-medium": "hsla(28, 90.2%, 56.1%, 0.600)",
        },
      },
    },
  },
  "colorSuccess": "var(--_color-success, light-dark(hsl(115, 77.5%, 27.8%),hsl(157, 84.9%, 41.6%)))",
  "colorSuccessFrosted": "var(--_color-success-frosted, light-dark(hsla(115, 77.5%, 27.8%, 0.180),hsla(157, 84.9%, 41.6%, 0.260)))",
  "colorSuccessFrostedSoft": "var(--_color-success-frosted-soft, light-dark(hsla(115, 77.5%, 27.8%, 0.100),hsla(157, 84.9%, 41.6%, 0.100)))",
  "colorSuccessLow": "var(--_color-success-low, light-dark(hsla(115, 77.5%, 27.8%, 0.180),hsla(157, 84.9%, 41.6%, 0.180)))",
  "colorSuccessMedium": "var(--_color-success-medium, light-dark(hsla(115, 77.5%, 27.8%, 0.600),hsla(157, 84.9%, 41.6%, 0.600)))",
  "colorSurface": "var(--_color-surface, light-dark(hsl(240, 10%, 95%),hsl(240, 2%, 10%)))",
  "colorWarning": "var(--_color-warning, light-dark(hsl(28, 97.7%, 34.1%),hsl(28, 90.2%, 56.1%)))",
  "colorWarningFrosted": "var(--_color-warning-frosted, light-dark(hsla(28, 97.7%, 34.1%, 0.180),hsla(28, 90.2%, 56.1%, 0.260)))",
  "colorWarningFrostedSoft": "var(--_color-warning-frosted-soft, light-dark(hsla(28, 97.7%, 34.1%, 0.100),hsla(28, 90.2%, 56.1%, 0.100)))",
  "colorWarningLow": "var(--_color-warning-low, light-dark(hsla(28, 97.7%, 34.1%, 0.180),hsla(28, 90.2%, 56.1%, 0.180)))",
  "colorWarningMedium": "var(--_color-warning-medium, light-dark(hsla(28, 97.7%, 34.1%, 0.600),hsla(28, 90.2%, 56.1%, 0.600)))",
  "displayLargeStyle": {
    "font": "normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "displayMediumStyle": {
    "font": "normal normal 400 clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "displaySmallStyle": {
    "font": "normal normal 400 clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "dropShadowHighStyle": {
    "boxShadow": "0px 8px 40px rgba(0,0,0,.16)",
  },
  "dropShadowLowStyle": {
    "boxShadow": "0px 3px 8px rgba(0,0,0,.16)",
  },
  "dropShadowMediumStyle": {
    "boxShadow": "0px 4px 16px rgba(0,0,0,.16)",
  },
  "durationLg": ".6s",
  "durationMd": ".4s",
  "durationSm": ".25s",
  "durationXl": "1.2s",
  "easeIn": "cubic-bezier(0,0,.2,1)",
  "easeInOut": "cubic-bezier(.25,.1,.25,1)",
  "easeOut": "cubic-bezier(.4,0,.5,1)",
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontHyphenationStyle": {
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "fontLineHeight": "calc(6px + 2.125ex)",
  "fontPorscheNext": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": {
    "display": {
      "large": "clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)",
      "medium": "clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)",
      "small": "clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)",
    },
    "heading": {
      "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
      "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
      "small": "1rem",
      "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
      "xxLarge": "clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)",
    },
    "text": {
      "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
      "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
      "small": "1rem",
      "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
      "xSmall": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "xxSmall": ".75rem",
    },
  },
  "fontSizeDisplay": {
    "large": "clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)",
    "medium": "clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)",
    "small": "clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)",
  },
  "fontSizeDisplayLarge": "clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)",
  "fontSizeDisplayMedium": "clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)",
  "fontSizeDisplaySmall": "clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)",
  "fontSizeHeading": {
    "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
    "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
    "small": "1rem",
    "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
    "xxLarge": "clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)",
  },
  "fontSizeHeadingLarge": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
  "fontSizeHeadingMedium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
  "fontSizeHeadingSmall": "1rem",
  "fontSizeHeadingXLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
  "fontSizeHeadingXXLarge": "clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)",
  "fontSizeText": {
    "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
    "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
    "small": "1rem",
    "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
    "xSmall": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
    "xxSmall": ".75rem",
  },
  "fontSizeTextLarge": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
  "fontSizeTextMedium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
  "fontSizeTextSmall": "1rem",
  "fontSizeTextXLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
  "fontSizeTextXSmall": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
  "fontSizeTextXXSmall": ".75rem",
  "fontStyle": {
    "italic": "italic",
    "normal": "normal",
  },
  "fontStyleItalic": "italic",
  "fontStyleNormal": "normal",
  "fontVariant": "normal",
  "fontWeight": {
    "bold": 700,
    "regular": 400,
    "semiBold": 600,
  },
  "fontWeightBold": 700,
  "fontWeightNormal": 400,
  "fontWeightRegular": 400,
  "fontWeightSemiBold": 600,
  "fontWeightSemibold": 600,
  "frostedGlassStyle": {
    "WebkitBackdropFilter": "blur(32px)",
    "backdropFilter": "blur(32px)",
  },
  "getFocusStyle": [Function],
  "getFocusVisibleStyle": [Function],
  "getMediaQueryMax": [Function],
  "getMediaQueryMin": [Function],
  "getMediaQueryMinMax": [Function],
  "getSkeletonStyle": [Function],
  "gradientStopsFadeDark": "hsla(0,0%,0%,.8) 0%,hsla(0,0%,0%,.8) 8.1%,hsla(0,0%,0%,.8) 15.5%,hsla(0,0%,0%,.8) 22.5%,hsla(0,0%,0%,.78) 29%,hsla(0,0%,0%,.73) 35.3%,hsla(0,0%,0%,.67) 41.2%,hsla(0,0%,0%,.6) 47.1%,hsla(0,0%,0%,.52) 52.9%,hsla(0,0%,0%,.44) 58.8%,hsla(0,0%,0%,.33) 64.7%,hsla(0,0%,0%,.22) 71%,hsla(0,0%,0%,.12) 77.5%,hsla(0,0%,0%,.05) 84.5%,hsla(0,0%,0%,.011) 91.9%,hsla(0,0%,0%,0) 100%",
  "gradientToBottomStyle": {
    "background": "linear-gradient(to bottom, hsla(0,0%,0%,.8) 0%,hsla(0,0%,0%,.8) 8.1%,hsla(0,0%,0%,.8) 15.5%,hsla(0,0%,0%,.8) 22.5%,hsla(0,0%,0%,.78) 29%,hsla(0,0%,0%,.73) 35.3%,hsla(0,0%,0%,.67) 41.2%,hsla(0,0%,0%,.6) 47.1%,hsla(0,0%,0%,.52) 52.9%,hsla(0,0%,0%,.44) 58.8%,hsla(0,0%,0%,.33) 64.7%,hsla(0,0%,0%,.22) 71%,hsla(0,0%,0%,.12) 77.5%,hsla(0,0%,0%,.05) 84.5%,hsla(0,0%,0%,.011) 91.9%,hsla(0,0%,0%,0) 100%);",
  },
  "gradientToLeftStyle": {
    "background": "linear-gradient(to left, hsla(0,0%,0%,.8) 0%,hsla(0,0%,0%,.8) 8.1%,hsla(0,0%,0%,.8) 15.5%,hsla(0,0%,0%,.8) 22.5%,hsla(0,0%,0%,.78) 29%,hsla(0,0%,0%,.73) 35.3%,hsla(0,0%,0%,.67) 41.2%,hsla(0,0%,0%,.6) 47.1%,hsla(0,0%,0%,.52) 52.9%,hsla(0,0%,0%,.44) 58.8%,hsla(0,0%,0%,.33) 64.7%,hsla(0,0%,0%,.22) 71%,hsla(0,0%,0%,.12) 77.5%,hsla(0,0%,0%,.05) 84.5%,hsla(0,0%,0%,.011) 91.9%,hsla(0,0%,0%,0) 100%);",
  },
  "gradientToRightStyle": {
    "background": "linear-gradient(to right, hsla(0,0%,0%,.8) 0%,hsla(0,0%,0%,.8) 8.1%,hsla(0,0%,0%,.8) 15.5%,hsla(0,0%,0%,.8) 22.5%,hsla(0,0%,0%,.78) 29%,hsla(0,0%,0%,.73) 35.3%,hsla(0,0%,0%,.67) 41.2%,hsla(0,0%,0%,.6) 47.1%,hsla(0,0%,0%,.52) 52.9%,hsla(0,0%,0%,.44) 58.8%,hsla(0,0%,0%,.33) 64.7%,hsla(0,0%,0%,.22) 71%,hsla(0,0%,0%,.12) 77.5%,hsla(0,0%,0%,.05) 84.5%,hsla(0,0%,0%,.011) 91.9%,hsla(0,0%,0%,0) 100%);",
  },
  "gradientToTopStyle": {
    "background": "linear-gradient(to top, hsla(0,0%,0%,.8) 0%,hsla(0,0%,0%,.8) 8.1%,hsla(0,0%,0%,.8) 15.5%,hsla(0,0%,0%,.8) 22.5%,hsla(0,0%,0%,.78) 29%,hsla(0,0%,0%,.73) 35.3%,hsla(0,0%,0%,.67) 41.2%,hsla(0,0%,0%,.6) 47.1%,hsla(0,0%,0%,.52) 52.9%,hsla(0,0%,0%,.44) 58.8%,hsla(0,0%,0%,.33) 64.7%,hsla(0,0%,0%,.22) 71%,hsla(0,0%,0%,.12) 77.5%,hsla(0,0%,0%,.05) 84.5%,hsla(0,0%,0%,.011) 91.9%,hsla(0,0%,0%,0) 100%);",
  },
  "gridBasic": {
    "columnEnd": "basic-end",
    "columnStart": "basic-start",
    "spanOneHalf": "var(--pds-grid-basic-span-one-half)",
    "spanOneThird": "var(--pds-grid-basic-span-one-third)",
    "spanTwoThirds": "var(--pds-grid-basic-span-two-thirds)",
  },
  "gridBasicColumnEnd": "basic-end",
  "gridBasicColumnStart": "basic-start",
  "gridBasicOffset": {
    "base": "max(22px, 10.625vw - 12px)",
    "s": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)",
    "xxl": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)",
  },
  "gridBasicOffsetBase": "max(22px, 10.625vw - 12px)",
  "gridBasicOffsetS": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)",
  "gridBasicOffsetXXL": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)",
  "gridBasicSpanOneHalf": "var(--pds-grid-basic-span-one-half)",
  "gridBasicSpanOneThird": "var(--pds-grid-basic-span-one-third)",
  "gridBasicSpanTwoThirds": "var(--pds-grid-basic-span-two-thirds)",
  "gridExtended": {
    "columnEnd": "extended-end",
    "columnStart": "extended-start",
    "spanOneHalf": "var(--pds-grid-extended-span-one-half)",
  },
  "gridExtendedColumnEnd": "extended-end",
  "gridExtendedColumnStart": "extended-start",
  "gridExtendedOffset": {
    "base": "max(22px, 10.625vw - 12px)",
    "s": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)",
    "xxl": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)",
  },
  "gridExtendedOffsetBase": "max(22px, 10.625vw - 12px)",
  "gridExtendedOffsetS": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)",
  "gridExtendedOffsetXXL": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)",
  "gridExtendedSpanOneHalf": "var(--pds-grid-extended-span-one-half)",
  "gridFull": {
    "columnEnd": "full-end",
    "columnStart": "full-start",
  },
  "gridFullColumnEnd": "full-end",
  "gridFullColumnStart": "full-start",
  "gridFullOffset": "max(0px, 50vw - 2560px / 2)",
  "gridGap": "clamp(16px, 1.25vw + 12px, 36px)",
  "gridNarrow": {
    "columnEnd": "narrow-end",
    "columnStart": "narrow-start",
    "spanOneHalf": "var(--pds-grid-narrow-span-one-half)",
  },
  "gridNarrowColumnEnd": "narrow-end",
  "gridNarrowColumnStart": "narrow-start",
  "gridNarrowOffset": {
    "base": "max(22px, 10.625vw - 12px)",
    "s": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 4)",
    "xxl": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 4)",
  },
  "gridNarrowOffsetBase": "max(22px, 10.625vw - 12px)",
  "gridNarrowOffsetS": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 4)",
  "gridNarrowOffsetXXL": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 4)",
  "gridNarrowSpanOneHalf": "var(--pds-grid-narrow-span-one-half)",
  "gridStyle": {
    "--pds-grid-basic-span-one-half": "span 3",
    "--pds-grid-basic-span-one-third": "span 2",
    "--pds-grid-basic-span-two-thirds": "span 4",
    "--pds-grid-extended-span-one-half": "span 3",
    "--pds-grid-narrow-span-one-half": "span 3",
    "--pds-internal-grid-safe-zone": "max(22px, 10.625vw - 12px)",
    "@media(min-width:1920px)": {
      "--pds-internal-grid-safe-zone": "min(50vw - 880px, 400px)",
    },
    "@media(min-width:760px)": {
      "--pds-grid-basic-span-one-half": "span 6",
      "--pds-grid-basic-span-one-third": "span 4",
      "--pds-grid-basic-span-two-thirds": "span 8",
      "--pds-grid-extended-span-one-half": "span 7",
      "--pds-grid-narrow-span-one-half": "span 4",
      "--pds-internal-grid-safe-zone": "calc(5vw - 16px)",
      "gridTemplateColumns": "[full-start] minmax(0,var(--pds-internal-grid-outer-column,calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start] minmax(0,1fr) [extended-start] minmax(0,1fr) [basic-start] repeat(2, minmax(0,1fr)) [narrow-start] repeat(8, minmax(0,1fr)) [narrow-end] repeat(2, minmax(0,1fr)) [basic-end] minmax(0,1fr) [extended-end] minmax(0,1fr) [wide-end] minmax(0,var(--pds-internal-grid-outer-column,calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end]",
    },
    "boxSizing": "content-box",
    "display": "grid",
    "gridGap": "clamp(16px, 1.25vw + 12px, 36px)",
    "gridTemplateColumns": "[full-start] minmax(0,var(--pds-internal-grid-outer-column,calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start extended-start basic-start narrow-start] repeat(6, minmax(0,1fr)) [narrow-end basic-end extended-end wide-end] minmax(0,var(--pds-internal-grid-outer-column,calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end]",
    "margin": "0 var(--pds-internal-grid-margin,0)",
    "maxWidth": "var(--pds-internal-grid-width-max,2560px)",
    "minWidth": "var(--pds-internal-grid-width-min,320px)",
    "padding": "0 calc(50% - var(--pds-internal-grid-margin,0px) - 2560px / 2)",
  },
  "gridWide": {
    "columnEnd": "wide-end",
    "columnStart": "wide-start",
  },
  "gridWideColumnEnd": "wide-end",
  "gridWideColumnStart": "wide-start",
  "gridWideOffset": {
    "base": "max(22px, 10.625vw - 12px)",
    "s": "calc(5vw - 16px)",
    "xxl": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px))",
  },
  "gridWideOffsetBase": "max(22px, 10.625vw - 12px)",
  "gridWideOffsetS": "calc(5vw - 16px)",
  "gridWideOffsetXXL": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px))",
  "headingLargeStyle": {
    "font": "normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "headingMediumStyle": {
    "font": "normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "headingSmallStyle": {
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "headingXLargeStyle": {
    "font": "normal normal 400 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "headingXXLargeStyle": {
    "font": "normal normal 400 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "leadingNormal": "calc(6px + 2.125ex)",
  "motionDurationLong": ".6s",
  "motionDurationModerate": ".4s",
  "motionDurationShort": ".25s",
  "motionDurationVeryLong": "1.2s",
  "motionEasingBase": "cubic-bezier(.25,.1,.25,1)",
  "motionEasingIn": "cubic-bezier(0,0,.2,1)",
  "motionEasingOut": "cubic-bezier(.4,0,.5,1)",
  "proseDisplayLgStyle": {
    "font": "normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseDisplayMdStyle": {
    "font": "normal normal 400 clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseDisplaySmStyle": {
    "font": "normal normal 400 clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseHeading2XlStyle": {
    "font": "normal normal 400 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseHeadingLgStyle": {
    "font": "normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseHeadingMdStyle": {
    "font": "normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseHeadingSmStyle": {
    "font": "normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseHeadingXlStyle": {
    "font": "normal normal 400 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseText2XsStyle": {
    "font": "normal normal 400 .75rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "proseTextLgStyle": {
    "font": "normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "proseTextMdStyle": {
    "font": "normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "proseTextSmStyle": {
    "font": "normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "proseTextXlStyle": {
    "font": "normal normal 400 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "proseTextXsStyle": {
    "font": "normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "radius2Xl": "16px",
  "radius3Xl": "24px",
  "radius4Xl": "32px",
  "radiusFull": "calc(infinity * 1px)",
  "radiusLg": "8px",
  "radiusMd": "6px",
  "radiusSm": "4px",
  "radiusXl": "12px",
  "radiusXs": "2px",
  "shadowLg": "0px 8px 40px rgba(0,0,0,.16)",
  "shadowMd": "0px 4px 16px rgba(0,0,0,.16)",
  "shadowSm": "0px 3px 8px rgba(0,0,0,.16)",
  "spacing": {
    "fluid": {
      "large": "clamp(32px, 2.75vw + 23px, 76px)",
      "medium": "clamp(16px, 1.25vw + 12px, 36px)",
      "small": "clamp(8px, 0.5vw + 6px, 16px)",
      "xLarge": "clamp(48px, 3vw + 38px, 96px)",
      "xSmall": "clamp(4px, 0.25vw + 3px, 8px)",
      "xxLarge": "clamp(80px, 7.5vw + 56px, 200px)",
    },
    "static": {
      "large": "32px",
      "medium": "16px",
      "small": "8px",
      "xLarge": "48px",
      "xSmall": "4px",
      "xxLarge": "80px",
    },
  },
  "spacingFluid": {
    "large": "clamp(32px, 2.75vw + 23px, 76px)",
    "medium": "clamp(16px, 1.25vw + 12px, 36px)",
    "small": "clamp(8px, 0.5vw + 6px, 16px)",
    "xLarge": "clamp(48px, 3vw + 38px, 96px)",
    "xSmall": "clamp(4px, 0.25vw + 3px, 8px)",
    "xxLarge": "clamp(80px, 7.5vw + 56px, 200px)",
  },
  "spacingFluid2Xl": "clamp(80px, 7.5vw + 56px, 200px)",
  "spacingFluidLarge": "clamp(32px, 2.75vw + 23px, 76px)",
  "spacingFluidLg": "clamp(32px, 2.75vw + 23px, 76px)",
  "spacingFluidMd": "clamp(16px, 1.25vw + 12px, 36px)",
  "spacingFluidMedium": "clamp(16px, 1.25vw + 12px, 36px)",
  "spacingFluidSm": "clamp(8px, 0.5vw + 6px, 16px)",
  "spacingFluidSmall": "clamp(8px, 0.5vw + 6px, 16px)",
  "spacingFluidXLarge": "clamp(48px, 3vw + 38px, 96px)",
  "spacingFluidXSmall": "clamp(4px, 0.25vw + 3px, 8px)",
  "spacingFluidXXLarge": "clamp(80px, 7.5vw + 56px, 200px)",
  "spacingFluidXl": "clamp(48px, 3vw + 38px, 96px)",
  "spacingFluidXs": "clamp(4px, 0.25vw + 3px, 8px)",
  "spacingStatic": {
    "large": "32px",
    "medium": "16px",
    "small": "8px",
    "xLarge": "48px",
    "xSmall": "4px",
    "xxLarge": "80px",
  },
  "spacingStatic2Xl": "80px",
  "spacingStaticLarge": "32px",
  "spacingStaticLg": "32px",
  "spacingStaticMd": "16px",
  "spacingStaticMedium": "16px",
  "spacingStaticSm": "8px",
  "spacingStaticSmall": "8px",
  "spacingStaticXLarge": "48px",
  "spacingStaticXSmall": "4px",
  "spacingStaticXXLarge": "80px",
  "spacingStaticXl": "48px",
  "spacingStaticXs": "4px",
  "textLargeStyle": {
    "font": "normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "textMediumStyle": {
    "font": "normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "textSmallStyle": {
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "textXLargeStyle": {
    "font": "normal normal 400 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "textXSmallStyle": {
    "font": "normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "textXXSmallStyle": {
    "font": "normal normal 400 .75rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "theme": {
    "dark": {
      "background": {
        "base": "hsl(225, 66.7%, 1.2%)",
        "frosted": "hsla(240, 2%, 43%, 0.228)",
        "shading": "hsla(240, 5.3%, 14.9%, 0.500)",
        "surface": "hsl(240, 2%, 10%)",
      },
      "contrast": {
        "high": "hsla(240, 12.5%, 96.9%, 0.670)",
        "low": "hsla(240, 12.5%, 96.9%, 0.450)",
        "medium": "hsla(240, 12.5%, 96.9%, 0.560)",
      },
      "notification": {
        "error": "hsl(0, 96.9%, 62%)",
        "errorSoft": "hsla(0, 96.9%, 62%, 0.260)",
        "info": "hsl(210, 100%, 54.5%)",
        "infoSoft": "hsla(210, 100%, 54.5%, 0.260)",
        "success": "hsl(157, 84.9%, 41.6%)",
        "successSoft": "hsla(157, 84.9%, 41.6%, 0.260)",
        "warning": "hsl(28, 90.2%, 56.1%)",
        "warningSoft": "hsla(28, 90.2%, 56.1%, 0.260)",
      },
      "primary": "hsl(225, 100%, 99%)",
      "state": {
        "active": "hsla(240, 2%, 43%, 0.228)",
        "disabled": "hsla(240,1.5%,61.8%,0.302)",
        "focus": "#1A44EA",
        "hover": "hsla(240, 2%, 43%, 0.228)",
      },
    },
    "light": {
      "background": {
        "base": "#fff",
        "frosted": "hsla(240, 5%, 70%, 0.148)",
        "shading": "hsla(240, 5.3%, 14.9%, 0.500)",
        "surface": "hsl(240, 10%, 95%)",
      },
      "contrast": {
        "high": "hsla(240, 7.1%, 11%, 0.700)",
        "low": "hsla(240, 5.3%, 14.9%, 0.500)",
        "medium": "hsla(240, 6.1%, 7%, 0.600)",
      },
      "notification": {
        "error": "hsl(357, 78%, 41%)",
        "errorSoft": "hsla(357, 78%, 41%, 0.180)",
        "info": "hsl(228, 83.2%, 51%)",
        "infoSoft": "hsla(228, 83.2%, 51%, 0.180)",
        "success": "hsl(115, 77.5%, 27.8%)",
        "successSoft": "hsla(115, 77.5%, 27.8%, 0.180)",
        "warning": "hsl(28, 97.7%, 34.1%)",
        "warningSoft": "hsla(28, 97.7%, 34.1%, 0.180)",
      },
      "primary": "hsl(225, 66.7%, 1.2%)",
      "state": {
        "active": "hsla(240, 5%, 70%, 0.148)",
        "disabled": "hsla(233,6.6%,23.9%,0.412)",
        "focus": "#1A44EA",
        "hover": "hsla(240, 5%, 70%, 0.148)",
      },
    },
  },
  "themeDark": {
    "background": {
      "base": "hsl(225, 66.7%, 1.2%)",
      "frosted": "hsla(240, 2%, 43%, 0.228)",
      "shading": "hsla(240, 5.3%, 14.9%, 0.500)",
      "surface": "hsl(240, 2%, 10%)",
    },
    "contrast": {
      "high": "hsla(240, 12.5%, 96.9%, 0.670)",
      "low": "hsla(240, 12.5%, 96.9%, 0.450)",
      "medium": "hsla(240, 12.5%, 96.9%, 0.560)",
    },
    "notification": {
      "error": "hsl(0, 96.9%, 62%)",
      "errorSoft": "hsla(0, 96.9%, 62%, 0.260)",
      "info": "hsl(210, 100%, 54.5%)",
      "infoSoft": "hsla(210, 100%, 54.5%, 0.260)",
      "success": "hsl(157, 84.9%, 41.6%)",
      "successSoft": "hsla(157, 84.9%, 41.6%, 0.260)",
      "warning": "hsl(28, 90.2%, 56.1%)",
      "warningSoft": "hsla(28, 90.2%, 56.1%, 0.260)",
    },
    "primary": "hsl(225, 100%, 99%)",
    "state": {
      "active": "hsla(240, 2%, 43%, 0.228)",
      "disabled": "hsla(240,1.5%,61.8%,0.302)",
      "focus": "#1A44EA",
      "hover": "hsla(240, 2%, 43%, 0.228)",
    },
  },
  "themeDarkBackgroundBase": "hsl(225, 66.7%, 1.2%)",
  "themeDarkBackgroundFrosted": "hsla(240, 2%, 43%, 0.228)",
  "themeDarkBackgroundShading": "hsla(240, 5.3%, 14.9%, 0.500)",
  "themeDarkBackgroundSurface": "hsl(240, 2%, 10%)",
  "themeDarkContrastHigh": "hsla(240, 12.5%, 96.9%, 0.670)",
  "themeDarkContrastLow": "hsla(240, 12.5%, 96.9%, 0.450)",
  "themeDarkContrastMedium": "hsla(240, 12.5%, 96.9%, 0.560)",
  "themeDarkNotificationError": "hsl(0, 96.9%, 62%)",
  "themeDarkNotificationErrorSoft": "hsla(0, 96.9%, 62%, 0.260)",
  "themeDarkNotificationInfo": "hsl(210, 100%, 54.5%)",
  "themeDarkNotificationInfoSoft": "hsla(210, 100%, 54.5%, 0.260)",
  "themeDarkNotificationSuccess": "hsl(157, 84.9%, 41.6%)",
  "themeDarkNotificationSuccessSoft": "hsla(157, 84.9%, 41.6%, 0.260)",
  "themeDarkNotificationWarning": "hsl(28, 90.2%, 56.1%)",
  "themeDarkNotificationWarningSoft": "hsla(28, 90.2%, 56.1%, 0.260)",
  "themeDarkPrimary": "hsl(225, 100%, 99%)",
  "themeDarkStateActive": "hsla(240, 2%, 43%, 0.228)",
  "themeDarkStateDisabled": "hsla(240,1.5%,61.8%,0.302)",
  "themeDarkStateFocus": "#1A44EA",
  "themeDarkStateHover": "hsla(240, 2%, 43%, 0.228)",
  "themeLight": {
    "background": {
      "base": "#fff",
      "frosted": "hsla(240, 5%, 70%, 0.148)",
      "shading": "hsla(240, 5.3%, 14.9%, 0.500)",
      "surface": "hsl(240, 10%, 95%)",
    },
    "contrast": {
      "high": "hsla(240, 7.1%, 11%, 0.700)",
      "low": "hsla(240, 5.3%, 14.9%, 0.500)",
      "medium": "hsla(240, 6.1%, 7%, 0.600)",
    },
    "notification": {
      "error": "hsl(357, 78%, 41%)",
      "errorSoft": "hsla(357, 78%, 41%, 0.180)",
      "info": "hsl(228, 83.2%, 51%)",
      "infoSoft": "hsla(228, 83.2%, 51%, 0.180)",
      "success": "hsl(115, 77.5%, 27.8%)",
      "successSoft": "hsla(115, 77.5%, 27.8%, 0.180)",
      "warning": "hsl(28, 97.7%, 34.1%)",
      "warningSoft": "hsla(28, 97.7%, 34.1%, 0.180)",
    },
    "primary": "hsl(225, 66.7%, 1.2%)",
    "state": {
      "active": "hsla(240, 5%, 70%, 0.148)",
      "disabled": "hsla(233,6.6%,23.9%,0.412)",
      "focus": "#1A44EA",
      "hover": "hsla(240, 5%, 70%, 0.148)",
    },
  },
  "themeLightBackgroundBase": "#fff",
  "themeLightBackgroundFrosted": "hsla(240, 5%, 70%, 0.148)",
  "themeLightBackgroundShading": "hsla(240, 5.3%, 14.9%, 0.500)",
  "themeLightBackgroundSurface": "hsl(240, 10%, 95%)",
  "themeLightContrastHigh": "hsla(240, 7.1%, 11%, 0.700)",
  "themeLightContrastLow": "hsla(240, 5.3%, 14.9%, 0.500)",
  "themeLightContrastMedium": "hsla(240, 6.1%, 7%, 0.600)",
  "themeLightNotificationError": "hsl(357, 78%, 41%)",
  "themeLightNotificationErrorSoft": "hsla(357, 78%, 41%, 0.180)",
  "themeLightNotificationInfo": "hsl(228, 83.2%, 51%)",
  "themeLightNotificationInfoSoft": "hsla(228, 83.2%, 51%, 0.180)",
  "themeLightNotificationSuccess": "hsl(115, 77.5%, 27.8%)",
  "themeLightNotificationSuccessSoft": "hsla(115, 77.5%, 27.8%, 0.180)",
  "themeLightNotificationWarning": "hsl(28, 97.7%, 34.1%)",
  "themeLightNotificationWarningSoft": "hsla(28, 97.7%, 34.1%, 0.180)",
  "themeLightPrimary": "hsl(225, 66.7%, 1.2%)",
  "themeLightStateActive": "hsla(240, 5%, 70%, 0.148)",
  "themeLightStateDisabled": "hsla(233,6.6%,23.9%,0.412)",
  "themeLightStateFocus": "#1A44EA",
  "themeLightStateHover": "hsla(240, 5%, 70%, 0.148)",
  "typescale2Xl": "clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)",
  "typescale2Xs": ".75rem",
  "typescaleLg": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
  "typescaleMd": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
  "typescaleSm": "1rem",
  "typescaleXl": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
  "typescaleXs": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
}
`;

exports[`style package content > should match vanilla-extract content 1`] = `
{
  "blurFrosted": "blur(32px)",
  "border": {
    "radius": {
      "large": "8px",
      "medium": "6px",
      "small": "4px",
    },
    "width": {
      "base": "2px",
      "thin": "1px",
    },
  },
  "borderRadius": {
    "large": "8px",
    "medium": "6px",
    "small": "4px",
  },
  "borderRadiusLarge": "8px",
  "borderRadiusMedium": "6px",
  "borderRadiusSmall": "4px",
  "borderWidth": {
    "base": "2px",
    "thin": "1px",
  },
  "borderWidthBase": "2px",
  "borderWidthThin": "1px",
  "breakpoint": {
    "base": 0,
    "l": 1300,
    "m": 1000,
    "s": 760,
    "xl": 1760,
    "xs": 480,
    "xxl": 1920,
  },
  "breakpointBase": 0,
  "breakpointL": 1300,
  "breakpointM": 1000,
  "breakpointS": 760,
  "breakpointXL": 1760,
  "breakpointXS": 480,
  "breakpointXXL": 1920,
  "breakpoints": [
    "base",
    "xs",
    "s",
    "m",
    "l",
    "xl",
    "xxl",
  ],
  "colorBackdrop": "var(--_color-backdrop, light-dark(hsla(240, 5.3%, 14.9%, 0.500),hsla(240, 5.3%, 14.9%, 0.500)))",
  "colorCanvas": "var(--_color-canvas, light-dark(#fff,hsl(225, 66.7%, 1.2%)))",
  "colorContrastHigh": "var(--_color-contrast-high, light-dark(hsla(240, 7.1%, 11%, 0.700),hsla(240, 12.5%, 96.9%, 0.670)))",
  "colorContrastHigher": "var(--_color-contrast-higher, light-dark(hsla(240, 8.7%, 9%, 0.800),hsla(240, 12.5%, 96.9%, 0.780)))",
  "colorContrastLow": "var(--_color-contrast-low, light-dark(hsla(240, 5.3%, 14.9%, 0.500),hsla(240, 12.5%, 96.9%, 0.450)))",
  "colorContrastLower": "var(--_color-contrast-lower, light-dark(hsla(234, 6%, 32.9%, 0.324),hsla(240, 1.5%, 61.8%, 0.302)))",
  "colorContrastMedium": "var(--_color-contrast-medium, light-dark(hsla(240, 6.1%, 7%, 0.600),hsla(240, 12.5%, 96.9%, 0.560)))",
  "colorError": "var(--_color-error, light-dark(hsl(357, 78%, 41%),hsl(0, 96.9%, 62%)))",
  "colorErrorFrosted": "var(--_color-error-frosted, light-dark(hsla(357, 78%, 41%, 0.180),hsla(0, 96.9%, 62%, 0.260)))",
  "colorErrorFrostedSoft": "var(--_color-error-frosted-soft, light-dark(hsla(357, 78%, 41%, 0.100),hsla(0, 96.9%, 62%, 0.100)))",
  "colorErrorLow": "var(--_color-error-low, light-dark(hsla(357, 78%, 41%, 0.180),hsla(0, 96.9%, 62%, 0.180)))",
  "colorErrorMedium": "var(--_color-error-medium, light-dark(hsla(357, 78%, 41%, 0.600),hsla(0, 96.9%, 62%, 0.600)))",
  "colorFocus": "var(--_color-focus, light-dark(#1A44EA,#1A44EA))",
  "colorFrosted": "var(--_color-frosted, light-dark(hsla(240, 5%, 70%, 0.148),hsla(240, 2%, 43%, 0.228)))",
  "colorFrostedSoft": "var(--_color-frosted-soft, light-dark(hsla(234, 9.8%, 60%, 0.060),hsla(240, 3.7%, 26.5%, 0.154)))",
  "colorFrostedStrong": "var(--_color-frosted-strong, light-dark(hsla(236, 6.5%, 42%, 0.236),hsla(240, 1.5%, 61.8%, 0.302)))",
  "colorInfo": "var(--_color-info, light-dark(hsl(228, 83.2%, 51%),hsl(210, 100%, 54.5%)))",
  "colorInfoFrosted": "var(--_color-info-frosted, light-dark(hsla(228, 83.2%, 51%, 0.180),hsla(210, 100%, 54.5%, 0.260)))",
  "colorInfoFrostedSoft": "var(--_color-info-frosted-soft, light-dark(hsla(228, 83.2%, 51%, 0.100),hsla(210, 100%, 54.5%, 0.100)))",
  "colorInfoLow": "var(--_color-info-low, light-dark(hsla(228, 83.2%, 51%, 0.180),hsla(210, 100%, 54.5%, 0.180)))",
  "colorInfoMedium": "var(--_color-info-medium, light-dark(hsla(228, 83.2%, 51%, 0.600),hsla(210, 100%, 54.5%, 0.600)))",
  "colorPrimary": "var(--_color-primary, light-dark(hsl(225, 66.7%, 1.2%),hsl(225, 100%, 99%)))",
  "colorSchemeStyles": [
    {
      "rule": {
        "colorScheme": "normal",
      },
      "selector": ".scheme-normal",
    },
    {
      "rule": {
        "colorScheme": "dark",
      },
      "selector": ".scheme-dark",
    },
    {
      "rule": {
        "colorScheme": "light",
      },
      "selector": ".scheme-light",
    },
    {
      "rule": {
        "colorScheme": "light dark",
      },
      "selector": ".scheme-light-dark",
    },
    {
      "rule": {
        "colorScheme": "only dark",
      },
      "selector": ".scheme-only-dark",
    },
    {
      "rule": {
        "colorScheme": "only light",
      },
      "selector": ".scheme-only-light",
    },
    {
      "rule": {
        "@supports": {
          "not (color: light-dark(white, black))": {
            "--_color-backdrop": "hsla(240, 5.3%, 14.9%, 0.500)",
            "--_color-canvas": "#fff",
            "--_color-contrast-high": "hsla(240, 7.1%, 11%, 0.700)",
            "--_color-contrast-higher": "hsla(240, 8.7%, 9%, 0.800)",
            "--_color-contrast-low": "hsla(240, 5.3%, 14.9%, 0.500)",
            "--_color-contrast-lower": "hsla(234, 6%, 32.9%, 0.324)",
            "--_color-contrast-medium": "hsla(240, 6.1%, 7%, 0.600)",
            "--_color-error": "hsl(357, 78%, 41%)",
            "--_color-error-frosted": "hsla(357, 78%, 41%, 0.180)",
            "--_color-error-frosted-soft": "hsla(357, 78%, 41%, 0.100)",
            "--_color-error-low": "hsla(357, 78%, 41%, 0.180)",
            "--_color-error-medium": "hsla(357, 78%, 41%, 0.600)",
            "--_color-focus": "#1A44EA",
            "--_color-frosted": "hsla(240, 5%, 70%, 0.148)",
            "--_color-frosted-soft": "hsla(234, 9.8%, 60%, 0.060)",
            "--_color-frosted-strong": "hsla(236, 6.5%, 42%, 0.236)",
            "--_color-info": "hsl(228, 83.2%, 51%)",
            "--_color-info-frosted": "hsla(228, 83.2%, 51%, 0.180)",
            "--_color-info-frosted-soft": "hsla(228, 83.2%, 51%, 0.100)",
            "--_color-info-low": "hsla(228, 83.2%, 51%, 0.180)",
            "--_color-info-medium": "hsla(228, 83.2%, 51%, 0.600)",
            "--_color-primary": "hsl(225, 66.7%, 1.2%)",
            "--_color-success": "hsl(115, 77.5%, 27.8%)",
            "--_color-success-frosted": "hsla(115, 77.5%, 27.8%, 0.180)",
            "--_color-success-frosted-soft": "hsla(115, 77.5%, 27.8%, 0.100)",
            "--_color-success-low": "hsla(115, 77.5%, 27.8%, 0.180)",
            "--_color-success-medium": "hsla(115, 77.5%, 27.8%, 0.600)",
            "--_color-surface": "hsl(240, 10%, 95%)",
            "--_color-warning": "hsl(28, 97.7%, 34.1%)",
            "--_color-warning-frosted": "hsla(28, 97.7%, 34.1%, 0.180)",
            "--_color-warning-frosted-soft": "hsla(28, 97.7%, 34.1%, 0.100)",
            "--_color-warning-low": "hsla(28, 97.7%, 34.1%, 0.180)",
            "--_color-warning-medium": "hsla(28, 97.7%, 34.1%, 0.600)",
          },
        },
      },
      "selector": ":root, .scheme-light, .scheme-only-light, .scheme-normal, .scheme-light-dark",
    },
    {
      "rule": {
        "@supports": {
          "not (color: light-dark(white, black))": {
            "--_color-backdrop": "hsla(240, 5.3%, 14.9%, 0.500)",
            "--_color-canvas": "hsl(225, 66.7%, 1.2%)",
            "--_color-contrast-high": "hsla(240, 12.5%, 96.9%, 0.670)",
            "--_color-contrast-higher": "hsla(240, 12.5%, 96.9%, 0.780)",
            "--_color-contrast-low": "hsla(240, 12.5%, 96.9%, 0.450)",
            "--_color-contrast-lower": "hsla(240, 1.5%, 61.8%, 0.302)",
            "--_color-contrast-medium": "hsla(240, 12.5%, 96.9%, 0.560)",
            "--_color-error": "hsl(0, 96.9%, 62%)",
            "--_color-error-frosted": "hsla(0, 96.9%, 62%, 0.260)",
            "--_color-error-frosted-soft": "hsla(0, 96.9%, 62%, 0.100)",
            "--_color-error-low": "hsla(0, 96.9%, 62%, 0.180)",
            "--_color-error-medium": "hsla(0, 96.9%, 62%, 0.600)",
            "--_color-focus": "#1A44EA",
            "--_color-frosted": "hsla(240, 2%, 43%, 0.228)",
            "--_color-frosted-soft": "hsla(240, 3.7%, 26.5%, 0.154)",
            "--_color-frosted-strong": "hsla(240, 1.5%, 61.8%, 0.302)",
            "--_color-info": "hsl(210, 100%, 54.5%)",
            "--_color-info-frosted": "hsla(210, 100%, 54.5%, 0.260)",
            "--_color-info-frosted-soft": "hsla(210, 100%, 54.5%, 0.100)",
            "--_color-info-low": "hsla(210, 100%, 54.5%, 0.180)",
            "--_color-info-medium": "hsla(210, 100%, 54.5%, 0.600)",
            "--_color-primary": "hsl(225, 100%, 99%)",
            "--_color-success": "hsl(157, 84.9%, 41.6%)",
            "--_color-success-frosted": "hsla(157, 84.9%, 41.6%, 0.260)",
            "--_color-success-frosted-soft": "hsla(157, 84.9%, 41.6%, 0.100)",
            "--_color-success-low": "hsla(157, 84.9%, 41.6%, 0.180)",
            "--_color-success-medium": "hsla(157, 84.9%, 41.6%, 0.600)",
            "--_color-surface": "hsl(240, 2%, 10%)",
            "--_color-warning": "hsl(28, 90.2%, 56.1%)",
            "--_color-warning-frosted": "hsla(28, 90.2%, 56.1%, 0.260)",
            "--_color-warning-frosted-soft": "hsla(28, 90.2%, 56.1%, 0.100)",
            "--_color-warning-low": "hsla(28, 90.2%, 56.1%, 0.180)",
            "--_color-warning-medium": "hsla(28, 90.2%, 56.1%, 0.600)",
          },
        },
      },
      "selector": ".scheme-dark, .scheme-only-dark",
    },
    {
      "rule": {
        "@supports": {
          "not (color: light-dark(white, black))": {
            "@media": {
              "(prefers-color-scheme: dark)": {
                "--_color-backdrop": "hsla(240, 5.3%, 14.9%, 0.500)",
                "--_color-canvas": "hsl(225, 66.7%, 1.2%)",
                "--_color-contrast-high": "hsla(240, 12.5%, 96.9%, 0.670)",
                "--_color-contrast-higher": "hsla(240, 12.5%, 96.9%, 0.780)",
                "--_color-contrast-low": "hsla(240, 12.5%, 96.9%, 0.450)",
                "--_color-contrast-lower": "hsla(240, 1.5%, 61.8%, 0.302)",
                "--_color-contrast-medium": "hsla(240, 12.5%, 96.9%, 0.560)",
                "--_color-error": "hsl(0, 96.9%, 62%)",
                "--_color-error-frosted": "hsla(0, 96.9%, 62%, 0.260)",
                "--_color-error-frosted-soft": "hsla(0, 96.9%, 62%, 0.100)",
                "--_color-error-low": "hsla(0, 96.9%, 62%, 0.180)",
                "--_color-error-medium": "hsla(0, 96.9%, 62%, 0.600)",
                "--_color-focus": "#1A44EA",
                "--_color-frosted": "hsla(240, 2%, 43%, 0.228)",
                "--_color-frosted-soft": "hsla(240, 3.7%, 26.5%, 0.154)",
                "--_color-frosted-strong": "hsla(240, 1.5%, 61.8%, 0.302)",
                "--_color-info": "hsl(210, 100%, 54.5%)",
                "--_color-info-frosted": "hsla(210, 100%, 54.5%, 0.260)",
                "--_color-info-frosted-soft": "hsla(210, 100%, 54.5%, 0.100)",
                "--_color-info-low": "hsla(210, 100%, 54.5%, 0.180)",
                "--_color-info-medium": "hsla(210, 100%, 54.5%, 0.600)",
                "--_color-primary": "hsl(225, 100%, 99%)",
                "--_color-success": "hsl(157, 84.9%, 41.6%)",
                "--_color-success-frosted": "hsla(157, 84.9%, 41.6%, 0.260)",
                "--_color-success-frosted-soft": "hsla(157, 84.9%, 41.6%, 0.100)",
                "--_color-success-low": "hsla(157, 84.9%, 41.6%, 0.180)",
                "--_color-success-medium": "hsla(157, 84.9%, 41.6%, 0.600)",
                "--_color-surface": "hsl(240, 2%, 10%)",
                "--_color-warning": "hsl(28, 90.2%, 56.1%)",
                "--_color-warning-frosted": "hsla(28, 90.2%, 56.1%, 0.260)",
                "--_color-warning-frosted-soft": "hsla(28, 90.2%, 56.1%, 0.100)",
                "--_color-warning-low": "hsla(28, 90.2%, 56.1%, 0.180)",
                "--_color-warning-medium": "hsla(28, 90.2%, 56.1%, 0.600)",
              },
            },
          },
        },
      },
      "selector": ".scheme-light-dark",
    },
  ],
  "colorSuccess": "var(--_color-success, light-dark(hsl(115, 77.5%, 27.8%),hsl(157, 84.9%, 41.6%)))",
  "colorSuccessFrosted": "var(--_color-success-frosted, light-dark(hsla(115, 77.5%, 27.8%, 0.180),hsla(157, 84.9%, 41.6%, 0.260)))",
  "colorSuccessFrostedSoft": "var(--_color-success-frosted-soft, light-dark(hsla(115, 77.5%, 27.8%, 0.100),hsla(157, 84.9%, 41.6%, 0.100)))",
  "colorSuccessLow": "var(--_color-success-low, light-dark(hsla(115, 77.5%, 27.8%, 0.180),hsla(157, 84.9%, 41.6%, 0.180)))",
  "colorSuccessMedium": "var(--_color-success-medium, light-dark(hsla(115, 77.5%, 27.8%, 0.600),hsla(157, 84.9%, 41.6%, 0.600)))",
  "colorSurface": "var(--_color-surface, light-dark(hsl(240, 10%, 95%),hsl(240, 2%, 10%)))",
  "colorWarning": "var(--_color-warning, light-dark(hsl(28, 97.7%, 34.1%),hsl(28, 90.2%, 56.1%)))",
  "colorWarningFrosted": "var(--_color-warning-frosted, light-dark(hsla(28, 97.7%, 34.1%, 0.180),hsla(28, 90.2%, 56.1%, 0.260)))",
  "colorWarningFrostedSoft": "var(--_color-warning-frosted-soft, light-dark(hsla(28, 97.7%, 34.1%, 0.100),hsla(28, 90.2%, 56.1%, 0.100)))",
  "colorWarningLow": "var(--_color-warning-low, light-dark(hsla(28, 97.7%, 34.1%, 0.180),hsla(28, 90.2%, 56.1%, 0.180)))",
  "colorWarningMedium": "var(--_color-warning-medium, light-dark(hsla(28, 97.7%, 34.1%, 0.600),hsla(28, 90.2%, 56.1%, 0.600)))",
  "displayLargeStyle": {
    "font": "normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "displayMediumStyle": {
    "font": "normal normal 400 clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "displaySmallStyle": {
    "font": "normal normal 400 clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "dropShadowHighStyle": {
    "boxShadow": "0px 8px 40px rgba(0,0,0,.16)",
  },
  "dropShadowLowStyle": {
    "boxShadow": "0px 3px 8px rgba(0,0,0,.16)",
  },
  "dropShadowMediumStyle": {
    "boxShadow": "0px 4px 16px rgba(0,0,0,.16)",
  },
  "durationLg": ".6s",
  "durationMd": ".4s",
  "durationSm": ".25s",
  "durationXl": "1.2s",
  "easeIn": "cubic-bezier(0,0,.2,1)",
  "easeInOut": "cubic-bezier(.25,.1,.25,1)",
  "easeOut": "cubic-bezier(.4,0,.5,1)",
  "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontHyphenationStyle": {
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "fontLineHeight": "calc(6px + 2.125ex)",
  "fontPorscheNext": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "fontSize": {
    "display": {
      "large": "clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)",
      "medium": "clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)",
      "small": "clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)",
    },
    "heading": {
      "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
      "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
      "small": "1rem",
      "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
      "xxLarge": "clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)",
    },
    "text": {
      "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
      "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
      "small": "1rem",
      "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
      "xSmall": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "xxSmall": ".75rem",
    },
  },
  "fontSizeDisplay": {
    "large": "clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)",
    "medium": "clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)",
    "small": "clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)",
  },
  "fontSizeDisplayLarge": "clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)",
  "fontSizeDisplayMedium": "clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)",
  "fontSizeDisplaySmall": "clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)",
  "fontSizeHeading": {
    "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
    "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
    "small": "1rem",
    "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
    "xxLarge": "clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)",
  },
  "fontSizeHeadingLarge": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
  "fontSizeHeadingMedium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
  "fontSizeHeadingSmall": "1rem",
  "fontSizeHeadingXLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
  "fontSizeHeadingXXLarge": "clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)",
  "fontSizeText": {
    "large": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
    "medium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
    "small": "1rem",
    "xLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
    "xSmall": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
    "xxSmall": ".75rem",
  },
  "fontSizeTextLarge": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
  "fontSizeTextMedium": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
  "fontSizeTextSmall": "1rem",
  "fontSizeTextXLarge": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
  "fontSizeTextXSmall": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
  "fontSizeTextXXSmall": ".75rem",
  "fontStyle": {
    "italic": "italic",
    "normal": "normal",
  },
  "fontStyleItalic": "italic",
  "fontStyleNormal": "normal",
  "fontVariant": "normal",
  "fontWeight": {
    "bold": 700,
    "regular": 400,
    "semiBold": 600,
  },
  "fontWeightBold": 700,
  "fontWeightNormal": 400,
  "fontWeightRegular": 400,
  "fontWeightSemiBold": 600,
  "fontWeightSemibold": 600,
  "frostedGlassStyle": {
    "WebkitBackdropFilter": "blur(32px)",
    "backdropFilter": "blur(32px)",
  },
  "getFocusStyle": [Function],
  "getFocusVisibleStyle": [Function],
  "getMediaQueryMax": [Function],
  "getMediaQueryMin": [Function],
  "getMediaQueryMinMax": [Function],
  "getSkeletonStyle": [Function],
  "gradientStopsFadeDark": "hsla(0,0%,0%,.8) 0%,hsla(0,0%,0%,.8) 8.1%,hsla(0,0%,0%,.8) 15.5%,hsla(0,0%,0%,.8) 22.5%,hsla(0,0%,0%,.78) 29%,hsla(0,0%,0%,.73) 35.3%,hsla(0,0%,0%,.67) 41.2%,hsla(0,0%,0%,.6) 47.1%,hsla(0,0%,0%,.52) 52.9%,hsla(0,0%,0%,.44) 58.8%,hsla(0,0%,0%,.33) 64.7%,hsla(0,0%,0%,.22) 71%,hsla(0,0%,0%,.12) 77.5%,hsla(0,0%,0%,.05) 84.5%,hsla(0,0%,0%,.011) 91.9%,hsla(0,0%,0%,0) 100%",
  "gradientToBottomStyle": {
    "background": "linear-gradient(to bottom, hsla(0,0%,0%,.8) 0%,hsla(0,0%,0%,.8) 8.1%,hsla(0,0%,0%,.8) 15.5%,hsla(0,0%,0%,.8) 22.5%,hsla(0,0%,0%,.78) 29%,hsla(0,0%,0%,.73) 35.3%,hsla(0,0%,0%,.67) 41.2%,hsla(0,0%,0%,.6) 47.1%,hsla(0,0%,0%,.52) 52.9%,hsla(0,0%,0%,.44) 58.8%,hsla(0,0%,0%,.33) 64.7%,hsla(0,0%,0%,.22) 71%,hsla(0,0%,0%,.12) 77.5%,hsla(0,0%,0%,.05) 84.5%,hsla(0,0%,0%,.011) 91.9%,hsla(0,0%,0%,0) 100%);",
  },
  "gradientToLeftStyle": {
    "background": "linear-gradient(to left, hsla(0,0%,0%,.8) 0%,hsla(0,0%,0%,.8) 8.1%,hsla(0,0%,0%,.8) 15.5%,hsla(0,0%,0%,.8) 22.5%,hsla(0,0%,0%,.78) 29%,hsla(0,0%,0%,.73) 35.3%,hsla(0,0%,0%,.67) 41.2%,hsla(0,0%,0%,.6) 47.1%,hsla(0,0%,0%,.52) 52.9%,hsla(0,0%,0%,.44) 58.8%,hsla(0,0%,0%,.33) 64.7%,hsla(0,0%,0%,.22) 71%,hsla(0,0%,0%,.12) 77.5%,hsla(0,0%,0%,.05) 84.5%,hsla(0,0%,0%,.011) 91.9%,hsla(0,0%,0%,0) 100%);",
  },
  "gradientToRightStyle": {
    "background": "linear-gradient(to right, hsla(0,0%,0%,.8) 0%,hsla(0,0%,0%,.8) 8.1%,hsla(0,0%,0%,.8) 15.5%,hsla(0,0%,0%,.8) 22.5%,hsla(0,0%,0%,.78) 29%,hsla(0,0%,0%,.73) 35.3%,hsla(0,0%,0%,.67) 41.2%,hsla(0,0%,0%,.6) 47.1%,hsla(0,0%,0%,.52) 52.9%,hsla(0,0%,0%,.44) 58.8%,hsla(0,0%,0%,.33) 64.7%,hsla(0,0%,0%,.22) 71%,hsla(0,0%,0%,.12) 77.5%,hsla(0,0%,0%,.05) 84.5%,hsla(0,0%,0%,.011) 91.9%,hsla(0,0%,0%,0) 100%);",
  },
  "gradientToTopStyle": {
    "background": "linear-gradient(to top, hsla(0,0%,0%,.8) 0%,hsla(0,0%,0%,.8) 8.1%,hsla(0,0%,0%,.8) 15.5%,hsla(0,0%,0%,.8) 22.5%,hsla(0,0%,0%,.78) 29%,hsla(0,0%,0%,.73) 35.3%,hsla(0,0%,0%,.67) 41.2%,hsla(0,0%,0%,.6) 47.1%,hsla(0,0%,0%,.52) 52.9%,hsla(0,0%,0%,.44) 58.8%,hsla(0,0%,0%,.33) 64.7%,hsla(0,0%,0%,.22) 71%,hsla(0,0%,0%,.12) 77.5%,hsla(0,0%,0%,.05) 84.5%,hsla(0,0%,0%,.011) 91.9%,hsla(0,0%,0%,0) 100%);",
  },
  "gridBasic": {
    "columnEnd": "basic-end",
    "columnStart": "basic-start",
    "spanOneHalf": "var(--pds-grid-basic-span-one-half)",
    "spanOneThird": "var(--pds-grid-basic-span-one-third)",
    "spanTwoThirds": "var(--pds-grid-basic-span-two-thirds)",
  },
  "gridBasicColumnEnd": "basic-end",
  "gridBasicColumnStart": "basic-start",
  "gridBasicOffset": {
    "base": "max(22px, 10.625vw - 12px)",
    "s": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)",
    "xxl": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)",
  },
  "gridBasicOffsetBase": "max(22px, 10.625vw - 12px)",
  "gridBasicOffsetS": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)",
  "gridBasicOffsetXXL": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 2)",
  "gridBasicSpanOneHalf": "var(--pds-grid-basic-span-one-half)",
  "gridBasicSpanOneThird": "var(--pds-grid-basic-span-one-third)",
  "gridBasicSpanTwoThirds": "var(--pds-grid-basic-span-two-thirds)",
  "gridExtended": {
    "columnEnd": "extended-end",
    "columnStart": "extended-start",
    "spanOneHalf": "var(--pds-grid-extended-span-one-half)",
  },
  "gridExtendedColumnEnd": "extended-end",
  "gridExtendedColumnStart": "extended-start",
  "gridExtendedOffset": {
    "base": "max(22px, 10.625vw - 12px)",
    "s": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)",
    "xxl": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)",
  },
  "gridExtendedOffsetBase": "max(22px, 10.625vw - 12px)",
  "gridExtendedOffsetS": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)",
  "gridExtendedOffsetXXL": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 1)",
  "gridExtendedSpanOneHalf": "var(--pds-grid-extended-span-one-half)",
  "gridFull": {
    "columnEnd": "full-end",
    "columnStart": "full-start",
  },
  "gridFullColumnEnd": "full-end",
  "gridFullColumnStart": "full-start",
  "gridFullOffset": "max(0px, 50vw - 2560px / 2)",
  "gridGap": "clamp(16px, 1.25vw + 12px, 36px)",
  "gridNarrow": {
    "columnEnd": "narrow-end",
    "columnStart": "narrow-start",
    "spanOneHalf": "var(--pds-grid-narrow-span-one-half)",
  },
  "gridNarrowColumnEnd": "narrow-end",
  "gridNarrowColumnStart": "narrow-start",
  "gridNarrowOffset": {
    "base": "max(22px, 10.625vw - 12px)",
    "s": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 4)",
    "xxl": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 4)",
  },
  "gridNarrowOffsetBase": "max(22px, 10.625vw - 12px)",
  "gridNarrowOffsetS": "calc(calc(5vw - 16px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 4)",
  "gridNarrowOffsetXXL": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px) + (clamp(16px, 1.25vw + 12px, 36px) + calc((min(100vw, 2560px) - min(50vw - 880px, 400px) * 2 - clamp(16px, 1.25vw + 12px, 36px) * 15) / 16)) * 4)",
  "gridNarrowSpanOneHalf": "var(--pds-grid-narrow-span-one-half)",
  "gridStyle": {
    "--pds-grid-basic-span-one-half": "span 3",
    "--pds-grid-basic-span-one-third": "span 2",
    "--pds-grid-basic-span-two-thirds": "span 4",
    "--pds-grid-extended-span-one-half": "span 3",
    "--pds-grid-narrow-span-one-half": "span 3",
    "--pds-internal-grid-safe-zone": "max(22px, 10.625vw - 12px)",
    "@media": {
      "(min-width:1920px)": {
        "--pds-internal-grid-safe-zone": "min(50vw - 880px, 400px)",
        "display": "grid",
      },
      "(min-width:760px)": {
        "--pds-grid-basic-span-one-half": "span 6",
        "--pds-grid-basic-span-one-third": "span 4",
        "--pds-grid-basic-span-two-thirds": "span 8",
        "--pds-grid-extended-span-one-half": "span 7",
        "--pds-grid-narrow-span-one-half": "span 4",
        "--pds-internal-grid-safe-zone": "calc(5vw - 16px)",
        "display": "grid",
        "gridTemplateColumns": "[full-start] minmax(0,var(--pds-internal-grid-outer-column,calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start] minmax(0,1fr) [extended-start] minmax(0,1fr) [basic-start] repeat(2, minmax(0,1fr)) [narrow-start] repeat(8, minmax(0,1fr)) [narrow-end] repeat(2, minmax(0,1fr)) [basic-end] minmax(0,1fr) [extended-end] minmax(0,1fr) [wide-end] minmax(0,var(--pds-internal-grid-outer-column,calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end]",
      },
    },
    "boxSizing": "content-box",
    "display": "grid",
    "gridGap": "clamp(16px, 1.25vw + 12px, 36px)",
    "gridTemplateColumns": "[full-start] minmax(0,var(--pds-internal-grid-outer-column,calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [wide-start extended-start basic-start narrow-start] repeat(6, minmax(0,1fr)) [narrow-end basic-end extended-end wide-end] minmax(0,var(--pds-internal-grid-outer-column,calc(var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)))) [full-end]",
    "margin": "0 var(--pds-internal-grid-margin,0)",
    "maxWidth": "var(--pds-internal-grid-width-max,2560px)",
    "minWidth": "var(--pds-internal-grid-width-min,320px)",
    "padding": "0 calc(50% - var(--pds-internal-grid-margin,0px) - 2560px / 2)",
  },
  "gridWide": {
    "columnEnd": "wide-end",
    "columnStart": "wide-start",
  },
  "gridWideColumnEnd": "wide-end",
  "gridWideColumnStart": "wide-start",
  "gridWideOffset": {
    "base": "max(22px, 10.625vw - 12px)",
    "s": "calc(5vw - 16px)",
    "xxl": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px))",
  },
  "gridWideOffsetBase": "max(22px, 10.625vw - 12px)",
  "gridWideOffsetS": "calc(5vw - 16px)",
  "gridWideOffsetXXL": "calc(max(0px, 50vw - 2560px / 2) + min(50vw - 880px, 400px))",
  "headingLargeStyle": {
    "font": "normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "headingMediumStyle": {
    "font": "normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "headingSmallStyle": {
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "headingXLargeStyle": {
    "font": "normal normal 400 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "headingXXLargeStyle": {
    "font": "normal normal 400 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "leadingNormal": "calc(6px + 2.125ex)",
  "motionDurationLong": ".6s",
  "motionDurationModerate": ".4s",
  "motionDurationShort": ".25s",
  "motionDurationVeryLong": "1.2s",
  "motionEasingBase": "cubic-bezier(.25,.1,.25,1)",
  "motionEasingIn": "cubic-bezier(0,0,.2,1)",
  "motionEasingOut": "cubic-bezier(.4,0,.5,1)",
  "proseDisplayLgStyle": {
    "font": "normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseDisplayMdStyle": {
    "font": "normal normal 400 clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseDisplaySmStyle": {
    "font": "normal normal 400 clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseHeading2XlStyle": {
    "font": "normal normal 400 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseHeadingLgStyle": {
    "font": "normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseHeadingMdStyle": {
    "font": "normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseHeadingSmStyle": {
    "font": "normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseHeadingXlStyle": {
    "font": "normal normal 400 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  },
  "proseText2XsStyle": {
    "font": "normal normal 400 .75rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "proseTextLgStyle": {
    "font": "normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "proseTextMdStyle": {
    "font": "normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "proseTextSmStyle": {
    "font": "normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "proseTextXlStyle": {
    "font": "normal normal 400 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "proseTextXsStyle": {
    "font": "normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem) / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "radius2Xl": "16px",
  "radius3Xl": "24px",
  "radius4Xl": "32px",
  "radiusFull": "calc(infinity * 1px)",
  "radiusLg": "8px",
  "radiusMd": "6px",
  "radiusSm": "4px",
  "radiusXl": "12px",
  "radiusXs": "2px",
  "shadowLg": "0px 8px 40px rgba(0,0,0,.16)",
  "shadowMd": "0px 4px 16px rgba(0,0,0,.16)",
  "shadowSm": "0px 3px 8px rgba(0,0,0,.16)",
  "skeletonKeyframes": {
    "from": {
      "backgroundPositionX": "100%",
    },
    "to": {
      "backgroundPositionX": "-100%",
    },
  },
  "spacing": {
    "fluid": {
      "large": "clamp(32px, 2.75vw + 23px, 76px)",
      "medium": "clamp(16px, 1.25vw + 12px, 36px)",
      "small": "clamp(8px, 0.5vw + 6px, 16px)",
      "xLarge": "clamp(48px, 3vw + 38px, 96px)",
      "xSmall": "clamp(4px, 0.25vw + 3px, 8px)",
      "xxLarge": "clamp(80px, 7.5vw + 56px, 200px)",
    },
    "static": {
      "large": "32px",
      "medium": "16px",
      "small": "8px",
      "xLarge": "48px",
      "xSmall": "4px",
      "xxLarge": "80px",
    },
  },
  "spacingFluid": {
    "large": "clamp(32px, 2.75vw + 23px, 76px)",
    "medium": "clamp(16px, 1.25vw + 12px, 36px)",
    "small": "clamp(8px, 0.5vw + 6px, 16px)",
    "xLarge": "clamp(48px, 3vw + 38px, 96px)",
    "xSmall": "clamp(4px, 0.25vw + 3px, 8px)",
    "xxLarge": "clamp(80px, 7.5vw + 56px, 200px)",
  },
  "spacingFluid2Xl": "clamp(80px, 7.5vw + 56px, 200px)",
  "spacingFluidLarge": "clamp(32px, 2.75vw + 23px, 76px)",
  "spacingFluidLg": "clamp(32px, 2.75vw + 23px, 76px)",
  "spacingFluidMd": "clamp(16px, 1.25vw + 12px, 36px)",
  "spacingFluidMedium": "clamp(16px, 1.25vw + 12px, 36px)",
  "spacingFluidSm": "clamp(8px, 0.5vw + 6px, 16px)",
  "spacingFluidSmall": "clamp(8px, 0.5vw + 6px, 16px)",
  "spacingFluidXLarge": "clamp(48px, 3vw + 38px, 96px)",
  "spacingFluidXSmall": "clamp(4px, 0.25vw + 3px, 8px)",
  "spacingFluidXXLarge": "clamp(80px, 7.5vw + 56px, 200px)",
  "spacingFluidXl": "clamp(48px, 3vw + 38px, 96px)",
  "spacingFluidXs": "clamp(4px, 0.25vw + 3px, 8px)",
  "spacingStatic": {
    "large": "32px",
    "medium": "16px",
    "small": "8px",
    "xLarge": "48px",
    "xSmall": "4px",
    "xxLarge": "80px",
  },
  "spacingStatic2Xl": "80px",
  "spacingStaticLarge": "32px",
  "spacingStaticLg": "32px",
  "spacingStaticMd": "16px",
  "spacingStaticMedium": "16px",
  "spacingStaticSm": "8px",
  "spacingStaticSmall": "8px",
  "spacingStaticXLarge": "48px",
  "spacingStaticXSmall": "4px",
  "spacingStaticXXLarge": "80px",
  "spacingStaticXl": "48px",
  "spacingStaticXs": "4px",
  "textLargeStyle": {
    "font": "normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "textMediumStyle": {
    "font": "normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "textSmallStyle": {
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "textXLargeStyle": {
    "font": "normal normal 400 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "textXSmallStyle": {
    "font": "normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "textXXSmallStyle": {
    "font": "normal normal 400 .75rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "hyphens": "var(--p-hyphens, auto)",
    "overflowWrap": "break-word",
  },
  "theme": {
    "dark": {
      "background": {
        "base": "hsl(225, 66.7%, 1.2%)",
        "frosted": "hsla(240, 2%, 43%, 0.228)",
        "shading": "hsla(240, 5.3%, 14.9%, 0.500)",
        "surface": "hsl(240, 2%, 10%)",
      },
      "contrast": {
        "high": "hsla(240, 12.5%, 96.9%, 0.670)",
        "low": "hsla(240, 12.5%, 96.9%, 0.450)",
        "medium": "hsla(240, 12.5%, 96.9%, 0.560)",
      },
      "notification": {
        "error": "hsl(0, 96.9%, 62%)",
        "errorSoft": "hsla(0, 96.9%, 62%, 0.260)",
        "info": "hsl(210, 100%, 54.5%)",
        "infoSoft": "hsla(210, 100%, 54.5%, 0.260)",
        "success": "hsl(157, 84.9%, 41.6%)",
        "successSoft": "hsla(157, 84.9%, 41.6%, 0.260)",
        "warning": "hsl(28, 90.2%, 56.1%)",
        "warningSoft": "hsla(28, 90.2%, 56.1%, 0.260)",
      },
      "primary": "hsl(225, 100%, 99%)",
      "state": {
        "active": "hsla(240, 2%, 43%, 0.228)",
        "disabled": "hsla(240,1.5%,61.8%,0.302)",
        "focus": "#1A44EA",
        "hover": "hsla(240, 2%, 43%, 0.228)",
      },
    },
    "light": {
      "background": {
        "base": "#fff",
        "frosted": "hsla(240, 5%, 70%, 0.148)",
        "shading": "hsla(240, 5.3%, 14.9%, 0.500)",
        "surface": "hsl(240, 10%, 95%)",
      },
      "contrast": {
        "high": "hsla(240, 7.1%, 11%, 0.700)",
        "low": "hsla(240, 5.3%, 14.9%, 0.500)",
        "medium": "hsla(240, 6.1%, 7%, 0.600)",
      },
      "notification": {
        "error": "hsl(357, 78%, 41%)",
        "errorSoft": "hsla(357, 78%, 41%, 0.180)",
        "info": "hsl(228, 83.2%, 51%)",
        "infoSoft": "hsla(228, 83.2%, 51%, 0.180)",
        "success": "hsl(115, 77.5%, 27.8%)",
        "successSoft": "hsla(115, 77.5%, 27.8%, 0.180)",
        "warning": "hsl(28, 97.7%, 34.1%)",
        "warningSoft": "hsla(28, 97.7%, 34.1%, 0.180)",
      },
      "primary": "hsl(225, 66.7%, 1.2%)",
      "state": {
        "active": "hsla(240, 5%, 70%, 0.148)",
        "disabled": "hsla(233,6.6%,23.9%,0.412)",
        "focus": "#1A44EA",
        "hover": "hsla(240, 5%, 70%, 0.148)",
      },
    },
  },
  "themeDark": {
    "background": {
      "base": "hsl(225, 66.7%, 1.2%)",
      "frosted": "hsla(240, 2%, 43%, 0.228)",
      "shading": "hsla(240, 5.3%, 14.9%, 0.500)",
      "surface": "hsl(240, 2%, 10%)",
    },
    "contrast": {
      "high": "hsla(240, 12.5%, 96.9%, 0.670)",
      "low": "hsla(240, 12.5%, 96.9%, 0.450)",
      "medium": "hsla(240, 12.5%, 96.9%, 0.560)",
    },
    "notification": {
      "error": "hsl(0, 96.9%, 62%)",
      "errorSoft": "hsla(0, 96.9%, 62%, 0.260)",
      "info": "hsl(210, 100%, 54.5%)",
      "infoSoft": "hsla(210, 100%, 54.5%, 0.260)",
      "success": "hsl(157, 84.9%, 41.6%)",
      "successSoft": "hsla(157, 84.9%, 41.6%, 0.260)",
      "warning": "hsl(28, 90.2%, 56.1%)",
      "warningSoft": "hsla(28, 90.2%, 56.1%, 0.260)",
    },
    "primary": "hsl(225, 100%, 99%)",
    "state": {
      "active": "hsla(240, 2%, 43%, 0.228)",
      "disabled": "hsla(240,1.5%,61.8%,0.302)",
      "focus": "#1A44EA",
      "hover": "hsla(240, 2%, 43%, 0.228)",
    },
  },
  "themeDarkBackgroundBase": "hsl(225, 66.7%, 1.2%)",
  "themeDarkBackgroundFrosted": "hsla(240, 2%, 43%, 0.228)",
  "themeDarkBackgroundShading": "hsla(240, 5.3%, 14.9%, 0.500)",
  "themeDarkBackgroundSurface": "hsl(240, 2%, 10%)",
  "themeDarkContrastHigh": "hsla(240, 12.5%, 96.9%, 0.670)",
  "themeDarkContrastLow": "hsla(240, 12.5%, 96.9%, 0.450)",
  "themeDarkContrastMedium": "hsla(240, 12.5%, 96.9%, 0.560)",
  "themeDarkNotificationError": "hsl(0, 96.9%, 62%)",
  "themeDarkNotificationErrorSoft": "hsla(0, 96.9%, 62%, 0.260)",
  "themeDarkNotificationInfo": "hsl(210, 100%, 54.5%)",
  "themeDarkNotificationInfoSoft": "hsla(210, 100%, 54.5%, 0.260)",
  "themeDarkNotificationSuccess": "hsl(157, 84.9%, 41.6%)",
  "themeDarkNotificationSuccessSoft": "hsla(157, 84.9%, 41.6%, 0.260)",
  "themeDarkNotificationWarning": "hsl(28, 90.2%, 56.1%)",
  "themeDarkNotificationWarningSoft": "hsla(28, 90.2%, 56.1%, 0.260)",
  "themeDarkPrimary": "hsl(225, 100%, 99%)",
  "themeDarkStateActive": "hsla(240, 2%, 43%, 0.228)",
  "themeDarkStateDisabled": "hsla(240,1.5%,61.8%,0.302)",
  "themeDarkStateFocus": "#1A44EA",
  "themeDarkStateHover": "hsla(240, 2%, 43%, 0.228)",
  "themeLight": {
    "background": {
      "base": "#fff",
      "frosted": "hsla(240, 5%, 70%, 0.148)",
      "shading": "hsla(240, 5.3%, 14.9%, 0.500)",
      "surface": "hsl(240, 10%, 95%)",
    },
    "contrast": {
      "high": "hsla(240, 7.1%, 11%, 0.700)",
      "low": "hsla(240, 5.3%, 14.9%, 0.500)",
      "medium": "hsla(240, 6.1%, 7%, 0.600)",
    },
    "notification": {
      "error": "hsl(357, 78%, 41%)",
      "errorSoft": "hsla(357, 78%, 41%, 0.180)",
      "info": "hsl(228, 83.2%, 51%)",
      "infoSoft": "hsla(228, 83.2%, 51%, 0.180)",
      "success": "hsl(115, 77.5%, 27.8%)",
      "successSoft": "hsla(115, 77.5%, 27.8%, 0.180)",
      "warning": "hsl(28, 97.7%, 34.1%)",
      "warningSoft": "hsla(28, 97.7%, 34.1%, 0.180)",
    },
    "primary": "hsl(225, 66.7%, 1.2%)",
    "state": {
      "active": "hsla(240, 5%, 70%, 0.148)",
      "disabled": "hsla(233,6.6%,23.9%,0.412)",
      "focus": "#1A44EA",
      "hover": "hsla(240, 5%, 70%, 0.148)",
    },
  },
  "themeLightBackgroundBase": "#fff",
  "themeLightBackgroundFrosted": "hsla(240, 5%, 70%, 0.148)",
  "themeLightBackgroundShading": "hsla(240, 5.3%, 14.9%, 0.500)",
  "themeLightBackgroundSurface": "hsl(240, 10%, 95%)",
  "themeLightContrastHigh": "hsla(240, 7.1%, 11%, 0.700)",
  "themeLightContrastLow": "hsla(240, 5.3%, 14.9%, 0.500)",
  "themeLightContrastMedium": "hsla(240, 6.1%, 7%, 0.600)",
  "themeLightNotificationError": "hsl(357, 78%, 41%)",
  "themeLightNotificationErrorSoft": "hsla(357, 78%, 41%, 0.180)",
  "themeLightNotificationInfo": "hsl(228, 83.2%, 51%)",
  "themeLightNotificationInfoSoft": "hsla(228, 83.2%, 51%, 0.180)",
  "themeLightNotificationSuccess": "hsl(115, 77.5%, 27.8%)",
  "themeLightNotificationSuccessSoft": "hsla(115, 77.5%, 27.8%, 0.180)",
  "themeLightNotificationWarning": "hsl(28, 97.7%, 34.1%)",
  "themeLightNotificationWarningSoft": "hsla(28, 97.7%, 34.1%, 0.180)",
  "themeLightPrimary": "hsl(225, 66.7%, 1.2%)",
  "themeLightStateActive": "hsla(240, 5%, 70%, 0.148)",
  "themeLightStateDisabled": "hsla(233,6.6%,23.9%,0.412)",
  "themeLightStateFocus": "#1A44EA",
  "themeLightStateHover": "hsla(240, 5%, 70%, 0.148)",
  "typescale2Xl": "clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)",
  "typescale2Xs": ".75rem",
  "typescaleLg": "clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)",
  "typescaleMd": "clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)",
  "typescaleSm": "1rem",
  "typescaleXl": "clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)",
  "typescaleXs": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
}
`;
